tests/codegen/fail/interface/struct/derive_missing_impl_attr.stderr
error[E0080]: evaluation of constant value failed
 --> fail/interface/struct/derive_missing_impl_attr.rs:8:10
  |
8 | #[derive(GraphQLInterface)]
  |          ^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: missing interface reference in implementer's `impl` attribute.', $DIR/fail/interface/struct/derive_missing_impl_attr.rs:8:10
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` (in Nightly builds, run with -Z macro-backtrace for more info)
